--- a/app/css/stylesheet.scss
+++ b/app/css/stylesheet.scss
@@ -1,5 +1,31 @@
+html, body {
+    margin: 0;
+    height: 100%;
+}
+
+.main {
+	height: 100%;
+	width:100%;
+	background-color: #03A678;
+	
+}
+
 .authentication {
 	background-color: red;
 	height:100px;
 	width:100px;
 }
+
+.home {
+	background-color: blue;
+	height:100px;
+	width:100px;
+}
+
+
+.event {
+	background-color: green;
+	height:100px;
+	width:100px;
+}
+
