--- a/app/css/stylesheet.scss
+++ b/app/css/stylesheet.scss
@@ -10,22 +10,12 @@ html, body {
 	
 }
 
-.authentication {
-	background-color: red;
-	height:100px;
-	width:100px;
-}
-
 .home {
-	background-color: blue;
-	height:100px;
-	width:100px;
+	text-align: center;
 }
 
 
-.event {
-	background-color: green;
-	height:100px;
-	width:100px;
-}
+
+
+
 
