--- a/app/css/stylesheet.scss
+++ b/app/css/stylesheet.scss
@@ -12,10 +12,18 @@ html, body {
 
 .home {
 	text-align: center;
+	height:100vh;
+
 }
 
 
+/* STILL HAVE TO FIX TO RESPONSIVE VERTICAL ALIGN */
+.login-button {
+  position: relative;
+  top:480px;
+  transform: translateY(-50%);
+}
 
-
+ 
 
 
