--- a/app/css/stylesheet.scss
+++ b/app/css/stylesheet.scss
@@ -1,13 +1,70 @@
+/* TO RESET CSS */
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* END OF RESET */ 
+
 html, body {
 	margin: 0;
 	height: 100%;
+	padding: 0;
 }
 
 .main {
 	height: 100%;
 	width:100%;
 	background-color: #03A678;
-	position: relative;
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding:0 !important;
 	
 	.friends-column{
 		background-color: grey;
@@ -41,7 +98,7 @@ html, body {
 			float:right;
 			height:133px;
 			width:30%;
-			background-color: green;
+			background-color: #71c458;
 			display: inline-block;
 			right: 0;
 		}
@@ -54,10 +111,10 @@ html, body {
 	}
 }
 
+
 .home {
 	text-align: center;
 	height:100vh;
-
 }
 
 
@@ -68,6 +125,36 @@ html, body {
 	transform: translateY(-50%);
 }
 
+.side-menu {
+	width:320px !important;
+	background-color: grey;
+	position:absolute;
+	top:0;
+	left:-320px;
+	margin-left:0 !important;
+	overflow:hidden;
+	padding:0;
+	height: 100%;
+}
+
+.side-menu.open {
+	width:320px !important;
+	background-color: grey;
+	position:absolute;
+	top:0;
+	left:0;
+	margin-left:0 !important;
+	overflow:hidden;
+	padding:0;
+	height: 100%;
+}
 
 
+
+.main-center-div {
+	width: 75%;
+	margin: 0;
+	margin:0;
+
+}
 
