--- a/app/css/stylesheet.scss
+++ b/app/css/stylesheet.scss
@@ -60,7 +60,7 @@ html, body {
 .main {
 	height: 100%;
 	width:100%;
-	background-color: #03A678;
+	background-color: #34495E;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -80,8 +80,8 @@ html, body {
 				height:135px;
 				width:100%;
 				background-color:white;
-				margin-bottom:0px;
-				border:1px black solid;
+				margin-top:2px;
+				
 				padding-left: 5px;
 			}
 
@@ -96,7 +96,7 @@ html, body {
 
 		.invited{
 			float:right;
-			height:133px;
+			height:135px;
 			width:30%;
 			background-color: #71c458;
 			display: inline-block;
@@ -149,12 +149,28 @@ html, body {
 	height: 100%;
 }
 
-
-
 .main-center-div {
 	width: 75%;
 	margin: 0;
 	margin:0;
 
 }
+
+.profile {
+	height:320px;
+	width:320px;
+	background-color: white;
+}
+
+.current-event {
+	height:135px;
+	width:100%;
+	background-color:white;
+	margin-top:1px;
+	padding-left: 5px;
+	padding-top: 20px;
+	color:black;
+
+}
+
 
