--- a/app/css/stylesheet.scss
+++ b/app/css/stylesheet.scss
@@ -58,8 +58,8 @@ html, body {
 }
 
 .main {
-	height: 100%;
-	width:100%;
+	height: 100vh;
+	width:100vw;
 	background-color: #34495E;
 	position: absolute;
 	top: 0;
@@ -67,21 +67,22 @@ html, body {
 	padding:0 !important;
 	
 	.friends-column{
-		background-color: grey;
+		background-color: #674172;
 		position:absolute;
 		top:0;
 		right:0;
-		overflow:hidden;
+		overflow-y:scroll;
 		padding:0;
 		width:320px;
-		height: 100%;
+		height: inherit;
+
+
 
 			.friend {
 				height:135px;
 				width:100%;
 				background-color:white;
 				margin-top:2px;
-				
 				padding-left: 5px;
 			}
 
@@ -132,29 +133,33 @@ html, body {
 	top:0;
 	left:-320px;
 	margin-left:0 !important;
-	overflow:hidden;
+	overflow-y:scroll;
 	padding:0;
 	height: 100%;
 }
 
 .side-menu.open {
 	width:320px !important;
-	background-color: grey;
+	background-color: #674172;
 	position:absolute;
 	top:0;
 	left:0;
 	margin-left:0 !important;
-	overflow:hidden;
+	overflow-y:scroll;
 	padding:0;
-	height: 100%;
+	height: inherit;
+
+
 }
 
+/* still need to figure out how to fit perfectly between two outter columns */
 .main-center-div {
 	width: 75%;
 	margin: 0;
 	margin:0;
 
 }
+/* waiting for fix */
 
 .profile {
 	height:320px;
@@ -172,5 +177,6 @@ html, body {
 	color:black;
 
 }
+
 
 
