--- a/app/css/stylesheet.scss
+++ b/app/css/stylesheet.scss
@@ -65,6 +65,14 @@ html, body {
 		display:flex;
 		justify-content:center;
 		align-items:center;
+
+		.event-circle{
+			/* temp color */
+			background-color:white;
+			height: 20%;
+			width: 20%;
+			border-radius: 50%;
+		}
 	}
 	
 	.friends-column{
