--- a/app/css/stylesheet.scss
+++ b/app/css/stylesheet.scss
@@ -69,8 +69,8 @@ html, body {
 		.event-circle{
 			/* temp color */
 			background-color:white;
-			height: 20%;
-			width: 20%;
+			height: 180px;
+			width: 180px;
 			border-radius: 50%;
 		}
 	}
