--- a/app/css/stylesheet.scss
+++ b/app/css/stylesheet.scss
@@ -74,6 +74,15 @@ html, body {
 			border-radius: 50%;
 		}
 	}
+
+	.side-menu {
+	background-color: #674172;
+	overflow-y:scroll;
+	height: inherit;
+	padding-left: 0px;
+	padding-right:0px;
+	min-width: 270px;
+}
 	
 	.friends-column{
 		background-color: #674172;
@@ -131,42 +140,8 @@ html, body {
 	transform: translateY(-50%);
 }
 
-.side-menu {
-	width:320px !important;
-	background-color: grey;
-	position:absolute;
-	padding-left:-15px;
-	left:-320px;
-	margin-left:0 !important;
-	overflow-y:scroll;
-	padding:0;
-	height: 100%;
-}
-
-.side-menu.open {
-	width:320px !important;
-	background-color: #674172;
-	position:absolute;
-	top:0;
-	left:0;
-	margin-left:0 !important;
-	overflow-y:scroll;
-	padding:0;
-	height: inherit;
-}
-
-
-
-/* still need to figure out how to fit perfectly between two outter columns */
-.main-center-div {
-
-}
-/* waiting for fix */
-
-
 .profile {
 	height:180px;
-	width:320px;
 	background-color: white;
 }
 
