added grid for event component

--- a/app/css/stylesheet.scss
+++ b/app/css/stylesheet.scss
@@ -202,7 +202,32 @@ html, body {
 
 }
 
+.col-md-12.event-info {
+	padding-left: 0px;
+	padding-right: 0px;
+}
 
 .greeen {
 	background-color: red;
+}
+
+.bblue {
+	background-color: blue;
+	height:496px;
+	width: 100%;
+}
+.bred {
+	background-color: red;
+	height:496px;
+	width: 100%;
+}
+.byellow {
+	background-color: yellow;
+	height:496px;
+	width: 100%;
+}
+.bgreen {
+	background-color: green;
+	height:496px;
+	width: 100%;
 }
