--- a/app/css/stylesheet.scss
+++ b/app/css/stylesheet.scss
@@ -61,10 +61,16 @@ html, body {
 	background-color: #34495E;
 
 	.main-center-div {
-		height: 100%;
+		height: 100vh;
 		display:flex;
 		justify-content:center;
 		align-items:center;
+
+		.event-info {
+			padding-left: 0px;
+			padding-right: 0px;
+			height: inherit;
+		}
 
 		.event-circle{
 			/* temp color */
@@ -200,11 +206,6 @@ html, body {
 	top:12px;
 	border:3px #71c458 solid;
 
-}
-
-.col-md-12.event-info {
-	padding-left: 0px;
-	padding-right: 0px;
 }
 
 .greeen {
