quick quadrant css fix

--- a/app/css/stylesheet.scss
+++ b/app/css/stylesheet.scss
@@ -217,28 +217,20 @@ html, body {
 
 }
 
-/*.greeen {
+.greeen {
 	background-color: red;
-}*/
-/*
+}
+
 .bblue {
 	background-color: blue;
 
-	height:50vh;
-	width: 50vw;
 }
 .bred {
 	background-color: red;
-	height:50vh;
-	width: 50vw;
 }
 .byellow {
 	background-color: yellow;
-	height:50vh;
-	width: 50vw;
 }
 .bgreen {
 	background-color: green;
-	height:50vh;
-	width: 50vw;
-}*/
+}
