add click to change class for inv

--- a/app/css/stylesheet.scss
+++ b/app/css/stylesheet.scss
@@ -139,7 +139,7 @@ html, body {
 			color:black;
 		}
 
-		.friend:hover .invited {
+		.friend:hover .invited, .friend.clicked .invited{
       position: relative;
       left:0px;
       transition: left 2s;
