add info window to maps

--- a/app/css/stylesheet.scss
+++ b/app/css/stylesheet.scss
@@ -384,6 +384,7 @@ input.chat_input.form-control {
   height: -webkit-calc(100% - 35px);
   height: -moz-calc(100% - 35px);
   height: calc(100% - 35px);
+  color: #000;
 }
 
 .module {
