on a fait plein de choses

--- a/app/css/stylesheet.scss
+++ b/app/css/stylesheet.scss
@@ -528,6 +528,10 @@ div.col-md-6.bred.quadrant {
 	color:black;
 }
 
+.name-data.andre{
+	background-color: #34AADC;
+}
+
 .checkmark {
 	max-height: 25px;
 
